Deprecation/Lint fixes