@@ -134,7 +134,7 @@ public class DataInstallerApp
         }
     }
 
-    public static AppFrame start(String appName, Class appFrameClass)
+    public static AppFrame start(String appName, Class<?> appFrameClass)
     {
         if (Configuration.isMacOS() && appName != null)
         {
@@ -143,7 +143,7 @@ public class DataInstallerApp
 
         try
         {
-            final AppFrame frame = (AppFrame) appFrameClass.newInstance();
+            final AppFrame frame = (AppFrame) appFrameClass.getConstructor().newInstance();
             frame.setTitle(appName);
             frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
             java.awt.EventQueue.invokeLater(new Runnable()
