@@ -1664,8 +1664,8 @@ public class RigidShapeBuilder extends ApplicationTemplate
                             String[] name = file.getName().split("-");
                             try
                             {
-                                Class c = Class.forName(name[0]);
-                                AbstractShape newShape = (AbstractShape) c.newInstance();
+                                Class<?> c = Class.forName(name[0]);
+                                AbstractShape newShape = (AbstractShape) c.getConstructor().newInstance();
                                 BufferedReader input = new BufferedReader(new FileReader(file));
                                 String s = input.readLine();
                                 newShape.restoreState(s);
@@ -1841,14 +1841,14 @@ public class RigidShapeBuilder extends ApplicationTemplate
             {
                 JMenuItem item = new JMenuItem("Open...");
                 item.setAccelerator(KeyStroke.getKeyStroke(
-                    KeyEvent.VK_O, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
+                    KeyEvent.VK_O, Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx()));
                 item.setActionCommand(OPEN);
                 item.addActionListener(controller);
                 menu.add(item);
 
                 item = new JMenuItem("Save...");
                 item.setAccelerator(KeyStroke.getKeyStroke(
-                    KeyEvent.VK_S, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
+                    KeyEvent.VK_S, Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx()));
                 item.setActionCommand(SAVE);
                 item.addActionListener(controller);
                 menu.add(item);
@@ -1878,7 +1878,7 @@ public class RigidShapeBuilder extends ApplicationTemplate
                 {
                     JMenuItem item = new JMenuItem(mode.getMode());
                     item.setAccelerator(KeyStroke.getKeyStroke(mode.getShortcut(),
-                        Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
+                        Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx()));
                     item.addActionListener(new ActionListener()
                     {
                         public void actionPerformed(ActionEvent e)
@@ -1914,7 +1914,7 @@ public class RigidShapeBuilder extends ApplicationTemplate
             {
                 JMenuItem item = new JMenuItem("Deselect");
                 item.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_D,
-                    Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
+                    Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx()));
                 item.setActionCommand(CLEAR_SELECTION);
                 item.addActionListener(controller);
                 menu.add(item);
